gccida/g0/ix86_split_fp_branch
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8352:29: error: must use 'enum' tag to refer to type 'rtx_code'
void  ix86_split_fp_branch( rtx_code code, rtx op1, rtx op2, rtx target1, rtx target2, rtx tmp) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8360:4: error: expected ';' after expression
rtx v12; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8360:5: error: use of undeclared identifier 'v12'; did you mean 'v11'?
rtx v12; // rax 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8359:18: note: 'v11' declared here
 struct rtx_def *v11; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8365:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8365:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8370:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8370:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8372:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+2Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8373:4: error: expected ';' after expression
rtx bypass; // [rsp+30h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8373:5: error: use of undeclared identifier 'bypass'
rtx bypass; // [rsp+30h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8374:4: error: expected ';' after expression
rtx second; // [rsp+38h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8374:5: error: use of undeclared identifier 'second'
rtx second; // [rsp+38h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8375:4: error: expected ';' after expression
rtx i; // [rsp+40h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8375:5: error: use of undeclared identifier 'i'
rtx i; // [rsp+40h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8376:4: error: expected ';' after expression
rtx condition; // [rsp+48h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8376:5: error: use of undeclared identifier 'condition'
rtx condition; // [rsp+48h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8377:4: error: expected ';' after expression
rtx tmp_0; // [rsp+50h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8377:5: error: use of undeclared identifier 'tmp_0'
rtx tmp_0; // [rsp+50h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/i386.c:8381:4: error: expected ';' after expression
rtx label; // [rsp+68h] [rbp-18h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_split_fp_branch/src/obj/i386.o] Error 1
